test/sh/error/func/multi_param_missing_comma.sk
f(x: int y: int) {
	# do nothing
}